--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WC-Base</title>
+    <title>Component explorer</title>
     <!--
     <script src="webcomponentsjs/custom-elements-es5-adapter.js"></script>
     -->
     <script src="webcomponentsjs/webcomponents-loader.js"></script>
-    <!--COMPONENTS-->
   </head>
   <body>
-    <!-- Add your web components here to test them -->
     <base-component data-attribute="init"></base-component>
-    <lithtml-component data-attribute="init"></lithtml-component>
-    <noshadow-component data-attribute="init"></noshadow-component>
   </body>
 </html>
